creating anonymized data for prognose